setup/kuard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard
  labels:
    app.kubernetes.io/name: kuard
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: kuard
  type: ClusterIP
