setup/kuard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  namespace: kuard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kuard.gorcl.hornpolish.net
    http:
      paths:
      - backend:
          serviceName: kuard
          servicePort: 80
        path: /
